unpackaged/main/default/objects/shop__c/fields/Is_Active_CC_Partner__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_CC_Partner__c</fullName>
    <description>CC User has logged in at least once</description>
    <formula>agency__r.Is_Active_CC_Partner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active CC Partner</label>
    <type>Checkbox</type>
</CustomField>