unpackaged/main/default/objects/shop__c/fields/is_AddDomain__c.field-meta.xml
<CustomField>
    <fullName>is_AddDomain__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>has been added to an already existing contract</inlineHelpText>
    <label>is AddDomain?</label>
    <type>Checkbox</type>
</CustomField>