unpackaged/main/default/objects/shop__c/fields/Is_Leading__c.field-meta.xml
<CustomField>
    <fullName>Is_Leading__c</fullName>
    <formula>time_to_leading_indicator_date__c &lt;= 90</formula>
    <label>Is Leading</label>
    <type>Checkbox</type>
</CustomField>