unpackaged/main/default/objects/shop__c/fields/language__c.field-meta.xml
<CustomField>
    <fullName>language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>target_market__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>