unpackaged/main/default/objects/shop__c/fields/last_churn_score_calculation__c.field-meta.xml
<CustomField>
    <fullName>last_churn_score_calculation__c</fullName>
    <label>Last Churn Score Calculation</label>
    <type>DateTime</type>
</CustomField>