unpackaged/main/default/objects/shop__c/fields/Last_Enrichment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Enrichment_Date__c</fullName>
    <label>Last Enrichment Date</label>
    <type>Date</type>
</CustomField>