unpackaged/main/default/objects/shop__c/fields/last_guarantee__c.field-meta.xml
<CustomField>
    <fullName>last_guarantee__c</fullName>
    <label>Last Guarantee on</label>
    <type>DateTime</type>
</CustomField>