unpackaged/main/default/objects/shop__c/fields/last_review__c.field-meta.xml
<CustomField>
    <fullName>last_review__c</fullName>
    <label>Last Review on</label>
    <type>DateTime</type>
</CustomField>