unpackaged/main/default/objects/shop__c/fields/last_review_more_than_2_weeks_ago__c.field-meta.xml
<CustomField>
    <fullName>last_review_more_than_2_weeks_ago__c</fullName>
    <formula>IF(  DATEVALUE(last_review__c) &lt;  TODAY()-14 &amp;&amp; TEXT(last_review__c) != &quot;Z&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Review More than 2 Weeks ago</label>
    <type>Checkbox</type>
</CustomField>