unpackaged/main/default/objects/shop__c/fields/Last_SI_change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_SI_change_Date__c</fullName>
    <label>Last SI change Date</label>
    <type>Date</type>
</CustomField>