unpackaged/main/default/objects/shop__c/fields/last_status_of_audit__c.field-meta.xml
<CustomField>
    <fullName>last_status_of_audit__c</fullName>
    <label>Last Status of Audit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CERT_PENDING</fullName>
                <label>Activation of certificate due,Please set certificate status to &quot;valid&quot;, check expiry date and allocate Buyer Protection products in accordance with the Buyer Protection model. , Activation due</label>
            </value>
            <value>
                <fullName>REQ_READY_CHECK</fullName>
                <label>Audit announced,A while ago became a member of Trusted Shops.  On your wish we had postponed the start of the certification of your online shop {0}.\n\nMay we now start the audit? Then please let us know. We\u2019re looking forward to hearing from you.\n\</label>
            </value>
            <value>
                <fullName>ISH_RECHECK</fullName>
                <label>Audit brought forward ,Audit shop again.,Processing completed (force due date)</label>
            </value>
            <value>
                <fullName>ISH_OK</fullName>
                <label>Audit completed successfully,Audit report passed</label>
            </value>
            <value>
                <fullName>CERT_ABORT_PENDING</fullName>
                <label>Audit completion initiated,If follow-up audit is unsuccessful, terminate audit indefinitely.  ,Termination of audit due</label>
            </value>
            <value>
                <fullName>CERT_ABORT_ON_HOLD</fullName>
                <label>Audit completion suspended,Termination of audit delayed</label>
            </value>
            <value>
                <fullName>ISH_ON_HOLD</fullName>
                <label>Audit date postponed, Audit postponed</label>
            </value>
            <value>
                <fullName>ISH_PENDING</fullName>
                <label>Audit date reached, As a member of Trusted Shops, your online shop is scheduled for another audit. \n\nA few test purchase orders will also be made as part of the audit. You will recognise the test purchase orders by the use of the name &quot;Test Tester&quot; from</label>
            </value>
            <value>
                <fullName>ENDED</fullName>
                <label>Audit finished</label>
            </value>
            <value>
                <fullName>AGR_REVISED</fullName>
                <label>Audit finished after quality control, Audit finished</label>
            </value>
            <value>
                <fullName>REQ_READY_OVERDUE</fullName>
                <label>Audit readiness deadline expired,Personally follow-up audit readiness.,Audit readiness enquiry</label>
            </value>
            <value>
                <fullName>ISH_FIXED</fullName>
                <label>Audit report was implemented,  Audit report implemented by shop, audit again. ,Processing completed</label>
            </value>
            <value>
                <fullName>ISH_RESTART</fullName>
                <label>Audit restarted,  New audit started , New audit started</label>
            </value>
            <value>
                <fullName>CERT_ABORTED</fullName>
                <label>Audit terminated , Audit terminated ,Trusted Shops audit terminated</label>
            </value>
            <value>
                <fullName>CERT_COMPLETED</fullName>
                <label>Certification completed successfully,  Carry out quality control, check and where necessary adjust contract and finish audit , Audit completed</label>
            </value>
            <value>
                <fullName>WAIT_PROFILE</fullName>
                <label>Creation of shop profile due soon</label>
            </value>
            <value>
                <fullName>GOT_LIMIT</fullName>
                <label>Credit check completed successfully,Trusted Shops credit check completed successfully,We are pleased to inform you that you have successfully completed the first step of the Trusted Shops Certification process (credit check).\n\nOn the basis of the packag</label>
            </value>
            <value>
                <fullName>NO_LIMIT</fullName>
                <label>Credit check finished with a negative result,Adjust or terminate contract. Certificate must be set to &quot;expired&quot;,Credit check negative</label>
            </value>
            <value>
                <fullName>RISK_APPROVAL</fullName>
                <label>Credit check started,Perform risk assessment,Credit check in progress</label>
            </value>
            <value>
                <fullName>RISK_ON_HOLD</fullName>
                <label>Credit check was postponed,Credit check postponed</label>
            </value>
            <value>
                <fullName>CHANGE_CHECK_EARLIEST</fullName>
                <label>Date of audit readiness altered</label>
            </value>
            <value>
                <fullName>ISH_FIX_OVERDUE</fullName>
                <label>Deadline for audit report implementation expired ,Implementation of audit report overdue. , Processing overdue</label>
            </value>
            <value>
                <fullName>STANDARD_EMAIL_ONLY</fullName>
                <label>Email sent</label>
            </value>
            <value>
                <fullName>EXPRESS_ONLY</fullName>
                <label>Express audit invoiced</label>
            </value>
            <value>
                <fullName>CHANGE_DUEDATE</fullName>
                <label>Feedback deadline altered</label>
            </value>
            <value>
                <fullName>STARTED_FST</fullName>
                <label>First audit started</label>
            </value>
            <value>
                <fullName>REQ_CHECK</fullName>
                <label>Follow up audit announced, As part of your Trusted Shops membership shortly I will audit your online shop again.\n\nDuring the audit I will place some test orders. You will recognise these by the name and address as I will use \u201CTest Tester\u201D from</label>
            </value>
            <value>
                <fullName>STARTED_SEQ</fullName>
                <label>Follow up audit started</label>
            </value>
            <value>
                <fullName>REQ_CHECK_OVERDUE</fullName>
                <label>Follow up audit started,Please do not undertake any further changes in your shop that relate to certification in order to avoid additional audit expense. You can view the current status of the audit at all times at {linkToShopCertificationArea}. Where pos</label>
            </value>
            <value>
                <fullName>CHANGE_FOLLOWUP_DATE</fullName>
                <label>Follow-up date changed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>