unpackaged/main/default/objects/shop__c/fields/Last_updated_at_shopsite_metrics__c.field-meta.xml
<CustomField>
    <fullName>Last_updated_at_shopsite_metrics__c</fullName>
    <description>all fields related to https://tracker.trustedshops.com/browse/PO-622</description>
    <label>Last updated at (Shopsite Metrics)</label>
    <type>DateTime</type>
</CustomField>