unpackaged/main/default/objects/shop__c/fields/Latest_NewGen_Plugin_available_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_NewGen_Plugin_available_Date__c</fullName>
    <label>Latest NewGen Plugin available Date</label>
    <summarizedField>Additional_Shop_Info__c.NewGen_Plugin_available_from__c</summarizedField>
    <summaryForeignKey>Additional_Shop_Info__c.Shop__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>