unpackaged/main/default/objects/shop__c/fields/Latest_NewGenPlugin_already_available__c.field-meta.xml
<CustomField>
    <fullName>Latest_NewGenPlugin_already_available__c</fullName>
    <formula>IF( Latest_NewGen_Plugin_available_Date__c  &lt; TODAY(), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest NewGenPlugin already available</label>
    <type>Checkbox</type>
</CustomField>