unpackaged/main/default/objects/shop__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <formula>TEXT(Partner_Community_Lead__r.LeadSource)</formula>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>