unpackaged/main/default/objects/shop__c/fields/leading_indicator_date__c.field-meta.xml
<CustomField>
    <fullName>leading_indicator_date__c</fullName>
    <description>The first day the customer had &gt;=3 ShopReviews and active certificate (if certificate is booked)</description>
    <label>Leading Indicator Date</label>
    <type>Date</type>
</CustomField>