unpackaged/main/default/objects/shop__c/fields/LinkgenRatePlans__c.field-meta.xml
<CustomField>
    <fullName>LinkgenRatePlans__c</fullName>
    <label>LinkgenRatePlans</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>