unpackaged/main/default/objects/shop__c/fields/marketing_contact__c.field-meta.xml
<CustomField>
    <fullName>marketing_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Is Marketing Contact for</relationshipLabel>
    <relationshipName>MarketingShops</relationshipName>
    <type>Lookup</type>
</CustomField>