unpackaged/main/default/objects/shop__c/fields/Matching_URL__c.field-meta.xml
<CustomField>
    <fullName>Matching_URL__c</fullName>
    <formula>SUBSTITUTE(
    SUBSTITUTE(
        SUBSTITUTE(
        IF(
        NOT(ISBLANK(Core_Url__c)),
        IF(RIGHT(Core_Url__c, 1) == &quot;/&quot;, MID(Core_Url__c , 0, LEN(Core_Url__c) - 1), Core_Url__c),
        IF(
            NOT(ISBLANK(normed_url__c)),
            IF(RIGHT(normed_url__c, 1) == &quot;/&quot;, MID(normed_url__c , 0, LEN(normed_url__c) - 1), normed_url__c),
            IF(
                NOT(ISBLANK(url__c)),
                IF(RIGHT(url__c, 1) == &quot;/&quot;, MID(url__c , 0, LEN(url__c) - 1), url__c),
                IF(
                    NOT(ISBLANK(Name)),
                    IF(RIGHT(Name, 1) == &quot;/&quot;, MID(Name , 0, LEN(Name) - 1), Name),
                    &quot;&quot;
                )
            )
        )
        ), &quot;https://&quot;, &quot;&quot;)
    , &quot;http://&quot;, &quot;&quot;)
, &quot;www.&quot;, &quot;&quot;)</formula>
    <label>Matching_URL</label>
    <type>Text</type>
</CustomField>