unpackaged/main/default/objects/shop__c/fields/Matching_URL_Text__c.field-meta.xml
<CustomField>
    <fullName>Matching_URL_Text__c</fullName>
    <label>Matching URL Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>