unpackaged/main/default/objects/shop__c/fields/New_Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>New_Existing_Customer__c</fullName>
    <description>Shop belongs to a new Customer or is a new shop of an existing customer?</description>
    <formula>IF(OR(ISBLANK(valid_from__c),ISBLANK(company_id__c),ISBLANK(company_id__r.Subscription_Start_Date__c)),NULL,IF(DATEVALUE(valid_from__c)= company_id__r.Subscription_Start_Date__c,&quot;New Customer&quot;,&quot;Existing Customer&quot;))</formula>
    <label>New/Existing Customer</label>
    <type>Text</type>
</CustomField>