unpackaged/main/default/objects/shop__c/fields/No_Audit_Reasons__c.field-meta.xml
<CustomField>
    <fullName>No_Audit_Reasons__c</fullName>
    <description>Increase transparency between Audit team and teams working in salesforce.</description>
    <label>No Audit Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>customer - incomplete audit</fullName>
            </value>
            <value>
                <fullName>customer - cost reduction (reviews only)</fullName>
            </value>
            <value>
                <fullName>customer - missing auditreport feedback</fullName>
            </value>
            <value>
                <fullName>customer - technical (SSW)</fullName>
            </value>
            <value>
                <fullName>TS - feasability</fullName>
            </value>
            <value>
                <fullName>TS - risk 1:insolvency</fullName>
            </value>
            <value>
                <fullName>TS - risk 2:protection framework</fullName>
            </value>
            <value>
                <fullName>TS - target market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>