unpackaged/main/default/objects/shop__c/fields/No_Deployment_Checks__c.field-meta.xml
<CustomField>
    <fullName>No_Deployment_Checks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>prevents creation of deployment check case for CSM</description>
    <label>No Deployment Checks</label>
    <type>Checkbox</type>
</CustomField>