unpackaged/main/default/objects/shop__c/fields/No_Deployment_Checks_Reasons__c.field-meta.xml
<CustomField>
    <fullName>No_Deployment_Checks_Reasons__c</fullName>
    <description>shows reasons why creation of deployment check case for CSM was prevented</description>
    <label>No Deployment Checks - Reasons</label>
    <type>TextArea</type>
</CustomField>