unpackaged/main/default/objects/shop__c/fields/No_Lead__c.field-meta.xml
<CustomField>
    <fullName>No_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Delete this afterwards</description>
    <label>No Lead</label>
    <type>Checkbox</type>
</CustomField>