unpackaged/main/default/objects/shop__c/fields/normed_url__c.field-meta.xml
<CustomField>
    <fullName>normed_url__c</fullName>
    <label>Normed URL</label>
    <type>Url</type>
</CustomField>