unpackaged/main/default/objects/shop__c/fields/not_merging_relevant__c.field-meta.xml
<CustomField>
    <fullName>not_merging_relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>not merging relevant</label>
    <type>Checkbox</type>
</CustomField>