unpackaged/main/default/objects/shop__c/fields/Number_of_Additional_Shop_Infos__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Additional_Shop_Infos__c</fullName>
    <label># of Additional Shop Infos</label>
    <summaryForeignKey>Additional_Shop_Info__c.Shop__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>