unpackaged/main/default/objects/shop__c/fields/Number_of_ASI_without_NewGen_Plugin__c.field-meta.xml
<CustomField>
    <fullName>Number_of_ASI_without_NewGen_Plugin__c</fullName>
    <label>Number of ASI without NewGen Plugin</label>
    <summaryFilterItems>
        <field>Additional_Shop_Info__c.NewGen_Plugin_installed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Additional_Shop_Info__c.Shop__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>