unpackaged/main/default/objects/shop__c/fields/Number_of_Local_Stores__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Local_Stores__c</fullName>
    <label>Number of Local Stores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>