unpackaged/main/default/objects/shop__c/fields/Number_of_Protections__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Protections__c</fullName>
    <label>Number of Protections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>