unpackaged/main/default/objects/shop__c/fields/number_of_status_changes_last_12_month__c.field-meta.xml
<CustomField>
    <fullName>number_of_status_changes_last_12_month__c</fullName>
    <label>number of status changes (last 12 month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>