unpackaged/main/default/objects/shop__c/fields/offer__c.field-meta.xml
<CustomField>
    <fullName>offer__c</fullName>
    <label>Offer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>