unpackaged/main/default/objects/shop__c/fields/offered_price__c.field-meta.xml
<CustomField>
    <fullName>offered_price__c</fullName>
    <label>Offered Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>