unpackaged/main/default/objects/shop__c/fields/operationally_responsible__c.field-meta.xml
<CustomField>
    <fullName>operationally_responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operationally Responsible</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shops (Operationally Responsible)</relationshipLabel>
    <relationshipName>OperationallyResponsiblefor</relationshipName>
    <type>Lookup</type>
</CustomField>