unpackaged/main/default/objects/shop__c/fields/order_number_of_first_valid_order__c.field-meta.xml
<CustomField>
    <fullName>order_number_of_first_valid_order__c</fullName>
    <label>order number of first valid order</label>
    <length>50</length>
    <type>Text</type>
</CustomField>