unpackaged/main/default/objects/shop__c/fields/Orderform_Shopsoftware__c.field-meta.xml
<CustomField>
    <fullName>Orderform_Shopsoftware__c</fullName>
    <description>Software with existing App or Plugin for our Trustbadge</description>
    <label>Orderform Shopsoftware</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>target_market__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4SELLERS</fullName>
            </value>
            <value>
                <fullName>AFTERBUY</fullName>
            </value>
            <value>
                <fullName>APPLICAS</fullName>
            </value>
            <value>
                <fullName>COSMOSHOP</fullName>
            </value>
            <value>
                <fullName>EINSUNDEINS</fullName>
            </value>
            <value>
                <fullName>EPAGES</fullName>
            </value>
            <value>
                <fullName>GAMBIO</fullName>
            </value>
            <value>
                <fullName>HOOD</fullName>
            </value>
            <value>
                <fullName>IAI</fullName>
            </value>
            <value>
                <fullName>JIMDO</fullName>
            </value>
            <value>
                <fullName>JTL</fullName>
            </value>
            <value>
                <fullName>LIGHTSPEED</fullName>
            </value>
            <value>
                <fullName>LOGICOMMERCE</fullName>
            </value>
            <value>
                <fullName>MAGENTO</fullName>
            </value>
            <value>
                <fullName>MAGENTO_DE</fullName>
            </value>
            <value>
                <fullName>MAUVE</fullName>
            </value>
            <value>
                <fullName>modified</fullName>
            </value>
            <value>
                <fullName>OXID_ESALES</fullName>
            </value>
            <value>
                <fullName>PLENTYMARKETS</fullName>
            </value>
            <value>
                <fullName>SHOPGATE</fullName>
            </value>
            <value>
                <fullName>SHOPWARE</fullName>
            </value>
            <value>
                <fullName>SOTE</fullName>
            </value>
            <value>
                <fullName>STORESYSTEMS</fullName>
            </value>
            <value>
                <fullName>STRATO</fullName>
            </value>
            <value>
                <fullName>WEBSALE</fullName>
            </value>
            <value>
                <fullName>WOOCOMMERCEGERMANIZED</fullName>
            </value>
            <value>
                <fullName>ZENTRADA</fullName>
            </value>
            <value>
                <fullName>REDCART</fullName>
            </value>
            <value>
                <fullName>shoper</fullName>
            </value>
            <value>
                <fullName>COMARCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>