unpackaged/main/default/objects/shop__c/fields/Orders_last_year_rolling__c.field-meta.xml
<CustomField>
    <fullName>Orders_last_year_rolling__c</fullName>
    <label>Orders last year (rolling)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>