unpackaged/main/default/objects/shop__c/fields/Orders_Trend__c.field-meta.xml
<CustomField>
    <fullName>Orders_Trend__c</fullName>
    <label>Orders Trend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>