unpackaged/main/default/objects/shop__c/fields/Orders_two_years_before_last_rolling__c.field-meta.xml
<CustomField>
    <fullName>Orders_two_years_before_last_rolling__c</fullName>
    <label>Orders two years before last (rolling)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>