unpackaged/main/default/objects/shop__c/fields/Partner_Comment__c.field-meta.xml
<CustomField>
    <fullName>Partner_Comment__c</fullName>
    <formula>Partner_Community_Lead__r.Partner_Comment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Comment</label>
    <type>Text</type>
</CustomField>