unpackaged/main/default/objects/shop__c/fields/Partner_Community_Lead__c.field-meta.xml
<CustomField>
    <fullName>Partner_Community_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the Partner Lead which created the Shop</description>
    <label>Partner Community Lead</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Lead.lead_priority__c</field>
            <operation>equals</operation>
            <value>Community Partner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Shops</relationshipLabel>
    <relationshipName>Shops</relationshipName>
    <type>Lookup</type>
</CustomField>