unpackaged/main/default/objects/shop__c/fields/payment_gateways__c.field-meta.xml
<CustomField>
    <fullName>payment_gateways__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Gateways</label>
    <type>Checkbox</type>
</CustomField>