unpackaged/main/default/objects/shop__c/fields/Post_Audit_Support__c.field-meta.xml
<CustomField>
    <fullName>Post_Audit_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Audit Support</label>
    <type>Checkbox</type>
</CustomField>