unpackaged/main/default/objects/shop__c/fields/Potential_Orders_after_SI__c.field-meta.xml
<CustomField>
    <fullName>Potential_Orders_after_SI__c</fullName>
    <label>Potential Orders after SI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>