unpackaged/main/default/objects/shop__c/fields/product_reviews_count__c.field-meta.xml
<CustomField>
    <fullName>product_reviews_count__c</fullName>
    <label>Number of Product Reviews (12 months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>