unpackaged/main/default/objects/shop__c/fields/Projected_orders_last_year_rolling__c.field-meta.xml
<CustomField>
    <fullName>Projected_orders_last_year_rolling__c</fullName>
    <formula>IF(DATEVALUE(valid_from__c) &lt;= ADDMONTHS(TODAY(),-12),  Orders_last_year_rolling__c, IF((TODAY() - DATEVALUE(valid_from__c))&lt;=0,(TODAY() - ADDMONTHS(TODAY(),-12))*Orders_last_year_rolling__c,(TODAY() - ADDMONTHS(TODAY(),-12))/(TODAY() - DATEVALUE(valid_from__c))* Orders_last_year_rolling__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected orders last year (rolling)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>