unpackaged/main/default/objects/shop__c/fields/Protection_Amount__c.field-meta.xml
<CustomField>
    <fullName>Protection_Amount__c</fullName>
    <label>Protection Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>