unpackaged/main/default/objects/shop__c/fields/publishes_newsletter__c.field-meta.xml
<CustomField>
    <fullName>publishes_newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publishes Newsletter</label>
    <type>Checkbox</type>
</CustomField>