unpackaged/main/default/objects/shop__c/fields/rakuten_shop__c.field-meta.xml
<CustomField>
    <fullName>rakuten_shop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rakuten Shop</label>
    <type>Checkbox</type>
</CustomField>