unpackaged/main/default/objects/shop__c/fields/rating_widget__c.field-meta.xml
<CustomField>
    <fullName>rating_widget__c</fullName>
    <label>Rating Widget</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BADGE</fullName>
            </value>
            <value>
                <fullName>BADGE_SIMPLIFIED</fullName>
            </value>
            <value>
                <fullName>DISABLED</fullName>
            </value>
            <value>
                <fullName>WIDGET</fullName>
                <default>true</default>
                <label>WIDGET</label>
            </value>
            <value>
                <fullName>WIDGET_SIMPLIFIED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>