unpackaged/main/default/objects/shop__c/fields/Ready_for_Audit_Start__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Audit_Start__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Audit Start?</label>
    <type>Checkbox</type>
</CustomField>