unpackaged/main/default/objects/shop__c/fields/responsible_for_purchasing__c.field-meta.xml
<CustomField>
    <fullName>responsible_for_purchasing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible for Purchasing</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Is Responsible fo Purchasing for</relationshipLabel>
    <relationshipName>PurchansingRespShops</relationshipName>
    <type>Lookup</type>
</CustomField>