unpackaged/main/default/objects/shop__c/fields/responsible_protections__c.field-meta.xml
<CustomField>
    <fullName>responsible_protections__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible for Buyer Protections</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Is Responsible for Buyer Protections for</relationshipLabel>
    <relationshipName>ProtectionsShops</relationshipName>
    <type>Lookup</type>
</CustomField>