unpackaged/main/default/objects/shop__c/fields/review_collector_contingent__c.field-meta.xml
<CustomField>
    <fullName>review_collector_contingent__c</fullName>
    <label>Remaining Review Collector Contingent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>