unpackaged/main/default/objects/shop__c/fields/review_count__c.field-meta.xml
<CustomField>
    <fullName>review_count__c</fullName>
    <label>Number of Shop Reviews (12 months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>