unpackaged/main/default/objects/shop__c/fields/review_count_total__c.field-meta.xml
<CustomField>
    <fullName>review_count_total__c</fullName>
    <label>Number of Shop Reviews Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>