unpackaged/main/default/objects/shop__c/fields/RevScore__c.field-meta.xml
<CustomField>
    <fullName>RevScore__c</fullName>
    <label>RevScore</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>