unpackaged/main/default/objects/shop__c/fields/Risk_approved__c.field-meta.xml
<CustomField>
    <fullName>Risk_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk approved?</label>
    <type>Checkbox</type>
</CustomField>