unpackaged/main/default/objects/shop__c/fields/risk_taker__c.field-meta.xml
<CustomField>
    <fullName>risk_taker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Taker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shops (Risk Taker)</relationshipLabel>
    <relationshipName>RiskTakerShops</relationshipName>
    <type>Lookup</type>
</CustomField>