unpackaged/main/default/objects/shop__c/fields/RiskLimitTrigger__c.field-meta.xml
<CustomField>
    <fullName>RiskLimitTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RiskLimitTrigger</label>
    <type>Checkbox</type>
</CustomField>