unpackaged/main/default/objects/shop__c/fields/sales_responsible_id__c.field-meta.xml
<CustomField>
    <fullName>sales_responsible_id__c</fullName>
    <label>Sales Responsible Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>