unpackaged/main/default/objects/shop__c/fields/sales_responsible_role__c.field-meta.xml
<CustomField>
    <fullName>sales_responsible_role__c</fullName>
    <description>Role of the Sales Responsible when set. For Team Changes.</description>
    <label>Sales Responsible Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>