unpackaged/main/default/objects/shop__c/fields/sales_responsible_text__c.field-meta.xml
<CustomField>
    <fullName>sales_responsible_text__c</fullName>
    <label>Sales Responsible Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>