unpackaged/main/default/objects/shop__c/fields/semrush_bounce_rate__c.field-meta.xml
<CustomField>
    <fullName>semrush_bounce_rate__c</fullName>
    <label>Semrush Bounce Rate</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>