unpackaged/main/default/objects/shop__c/fields/semrush_pages_per_visit__c.field-meta.xml
<CustomField>
    <fullName>semrush_pages_per_visit__c</fullName>
    <label>Semrush Pages per Visit</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>