unpackaged/main/default/objects/shop__c/fields/semrush_rank__c.field-meta.xml
<CustomField>
    <fullName>semrush_rank__c</fullName>
    <label>Semrush Rank</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>