unpackaged/main/default/objects/shop__c/fields/semrush_time_on_site__c.field-meta.xml
<CustomField>
    <fullName>semrush_time_on_site__c</fullName>
    <label>Semrush Time on Site</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>