unpackaged/main/default/objects/shop__c/fields/semrush_users__c.field-meta.xml
<CustomField>
    <fullName>semrush_users__c</fullName>
    <label>Semrush Users</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>