unpackaged/main/default/objects/shop__c/fields/semrush_visits__c.field-meta.xml
<CustomField>
    <fullName>semrush_visits__c</fullName>
    <label>Semrush Visits</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>